[package]
name = "nu_plugin_net"
license = "MIT"
authors = ["Carson <c@rson.riker.me>"]
keywords = ["nushell", "network", "plugin"]
homepage = "https://github.com/fennewald/nu_plugin_net"
repository = "https://github.com/fennewald/nu_plugin_net"
description = "A nushell plugin for enumerating network interfaces in a platform-agnostic way"
version = "1.3.0"
edition = "2021"
readme = "README.md"

[dependencies]
pnet = { version = "0.34", features = ["std"] }
nu-plugin = "0.87.0"
nu-protocol = { version = "0.87.0", features = ["plugin"] }
