[package]
name = "nu_plugin_net"
license = "MIT"
authors = ["Carson <c@rson.riker.me>"]
keywords = ["nushell", "network", "plugin"]
homepage = "https://github.com/fennewald/nu_plugin_net"
repository = "https://github.com/fennewald/nu_plugin_net"
description = "A nushell plugin for enumerating network interfaces in a platform-agnostic way"
version = "1.8.0"
edition = "2021"
readme = "README.md"

[[bin]]
name = "nu_plugin_net"

[lib]

[dependencies]
nu-plugin = "0.103.0"
nu-protocol = { version = "0.103.0", features = ["plugin"] }
pnet = "0.35.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
